# kale-ndar

./: .env  CONNECTION-SETUP.md  ENTERPRISE-ORACLE-SERVICES.md  FRONTEND-BACKEND-CONNECTION-GUIDE.md  FRONTEND-BACKEND-INTEGRATION-SUMMARY.md  GAMIFICATION-ENHANCEMENT-GUIDE.md  HACKATHON-IMPROVEMENTS-SUMMARY.md  LIVE-ORACLE-DEMONSTRATION-GUIDE.md  MARKET-BETTING-INTEGRATION-GUIDE.md  PITCH-DECK-README.md  README.md  SEASONAL-COMPETITIONS-GUIDE.md  env.local.example  index.html  package-lock.json  package.json  start-dev.sh  start-full-stack.bat  start-full-stack.sh  tailwind.config.ts  test.html
backend/: .env  BUSINESS-LOGIC-INTEGRATION-GUIDE.md  BUSINESS-LOGIC-README.md  DATA-LAYER-IMPLEMENTATION.md  ENHANCED-BACKEND-IMPLEMENTATION.md  HACKATHON-API-DOCUMENTATION.md  HACKATHON-DEMO-GUIDE.md  README.md  docker-compose.yml  env.example  jest.config.js  package-lock.json  package.json  test-setup.js  tsconfig.json
contracts/: Cargo.toml  INTEROPERABILITY-SUMMARY.md  SMART-CONTRACT-INTEROPERABILITY-GUIDE.md
contracts/enterprise-oracle/: Cargo.toml
contracts/enterprise-oracle/src/: lib.rs
contracts/event-manager/: Cargo.toml
contracts/event-manager/src/: lib.rs
contracts/prediction-market/: Cargo.toml
contracts/prediction-market/src/: lib.rs
docs/: API.md  BUTTON-FUNCTIONALITY-FIXES.md  DEFI-FUNCTIONALITY-IMPROVEMENTS.md  DEMO-SCRIPT.md  DEMO-SYSTEM-README.md  FRONTEND-BACKEND-INTEGRATION-SUMMARY.md  HACKATHON-SUBMISSION-GUIDE.md  KALE-NDAR-DELIVERY-SUMMARY.md  KALE-NDAR-IMPLEMENTATION-GUIDE.md  MULTI-OUTCOME-MARKETS-SUMMARY.md  SOCIAL-TRADING-FEATURES.md  (+5 more)
(+265 files in other folders)
