[package]
name = "enterprise-oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"
shared-types = { path = "../shared-types" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
rpath = false
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
